fix alignment of submission table

--- a/src/styles/partials/_adminTable.scss
+++ b/src/styles/partials/_adminTable.scss
@@ -61,8 +61,8 @@
         }
 
         .adminTabletimeDate {
-            padding-left: 1.25rem;
-            text-align: left;
+            padding-right: 2.5rem;
+            text-align: right;
         }
 
         .adminTabletimeDateRight {
